tooling/nargo_cli/tests/compile_failure/trait_wrong_method_return_type/src/main.nr
trait Default {
    fn default() -> Self;
}

struct Foo {
}

// This should fail to compile as `default()` should return `Foo`
impl Default for Foo {
    fn default() -> Field {
        x
    }
}

fn main() {
}
